Implemented graceful shutdown

--- a/config/wbl0_vars.env
+++ b/config/wbl0_vars.env
@@ -1,5 +1,8 @@
 # Example Configuration file
 
+# Server port adress
+SERVER_ADRESS=":8080"
+
 # Database login creds
 DB_LOGIN=itsme
 DB_PASSWORD=passssword
